@@ -4,6 +4,10 @@
 
   27 Apr 2015; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz>
   transdecoder-2.0.1.ebuild:
+  sci-biology/transdecoder: more ebuild cleanup
+
+  27 Apr 2015; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz>
+  transdecoder-2.0.1.ebuild:
   sci-biology/transdecoder: ebuild cleanup
 
   27 Apr 2015; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz>
